# robotics-learning-book

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  docker-compose.yml  docusaurus.config.js  package.json  pyproject.toml  pytest.ini  requirements.txt  sidebars.js
.specify/memory/: constitution.md
backend/: README.md  main.py  pyproject.toml
backend/tests/: test_pipeline.py
docs/: intro.mdx
docs/components/DiagramViewer/: index.js
docs/module1/: assessment.mdx  intro.mdx  nodes_topics_services.mdx  rclpy_bridge.mdx  urdf_primer.mdx
docs/module2/: assessment.mdx  gazebo_physics.mdx  intro.mdx  sensor_simulation.mdx  unity_hri.mdx
docs/module3/: assessment.mdx  intro.mdx  isaac_ros_vslam.mdx  isaac_sim.mdx  nav2_humanoid.mdx
docs/module4/: assessment.mdx  cognitive_planning.mdx  intro.mdx  vla_integration.mdx  voice_to_action.mdx
specs/001-ros2-module1/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-digital-twin/: spec.md
specs/003-ai-robot-brain/: spec.md
specs/004-vla/: spec.md
specs/005-home-page-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-fix-vercel-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-openai-agent-fastapi/: spec.md
src/css/: custom.css
src/pages/: index.js
tests/: test_module1_agent.py  test_module4_vla.py
(+47 files in other folders)
